test/data/codegen/valid/float32_parameter/queries.cypher
// name: PeopleAtHeight :many
MATCH (p:Person) WHERE p.height = $h RETURN p.name
