test/data/codegen/invalid/duplicate_query_name/second.cypher
// name: FindPerson :many
MATCH (p:Person) WHERE p.id = $id RETURN p
